recursion.lessons.recursion.koch.Koch.scala.error
Koch:24: error: not found: value levels
    snowFlake(levels+1,lenght)
              ^